# PrediCT-CLI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh
.claude/: settings.local.json
Instructions/: approachV3.md  changes_v2.md  project1_heart_segmentation.md  project1_model_choice_template.md
colab notebooks/: 00_Common_Task.ipynb  10_project1_totalseg_groundtruth.ipynb  11_project1_train_unet_coarse_mask.ipynb  12_project1_evaluate_dice_and_time_v2.ipynb
data_example/: data_README.md  metadata.csv
documentation/: index.md
documentation/augment/: build_monai_transforms.md
documentation/cli/: build_parser.md  main.md
documentation/config/: HUWindowConfig.md  LoaderConfig.md  PathsConfig.md  ResampleConfig.md  SplitConfig.md  resolve_raw_dir.md
documentation/dataset/: SampleRecord.md  VolumeDataset.md  build_dataloader.md  default_load_volume.md  pad_collate_fn.md
documentation/io/: Volume.md  discover_subject_dirs.md  load_nifti_volume.md  load_numpy_volume.md  read_dicom_series.md  save_numpy_volume.md
documentation/metadata/: generate_metadata_csv.md
documentation/pipeline/: PipelineOutputs.md  build_records_fallback.md  load_metadata_csv.md  run_pipeline.md
documentation/preprocess/: apply_hu_window.md  hu_windowing.md  resample_volume.md
documentation/report/: build_justification_text.md  write_justification_report.md
documentation/sampling/: oversample_minority.md
documentation/split/: SplitResult.md  stratified_split.md
scripts/: generate_justification.py
src/predict/: __init__.py  (+16 more)
(+6 files in other folders)
